# fractal-logic-unit

./: FLU_MANIFEST.json  LICENSE  README.md  pyproject.toml  pytest_shim.py  run_tests.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: latest.json  latest_suite.json
docs/: ANALYSIS_MAGIC_CUBES_ORDER5.md  ARCHITECTURE.md  AUDIT_NOTES.md  BENCHMARKS.md  CHANGELOG.md  FILE_INTEGRITY.md  KINSHIP.md  OPEN_DEBT.md  PACKAGE_CONTRACT.json  PAPER.md  PERSPECTIVES.md  PROOF_APN_OBSTRUCTION.md  PROOF_DN1_DN2_FRACTAL_NET_ORTHOGONAL.md  PROOF_DN1_LO_SHU_SUDOKU.md  PROOF_DN2_APN_SCRAMBLING.md  PROOF_OD19_LINEAR.md  PROOF_OD_27_DIGITAL_NET.md  README.md  ROADMAP.md  SPRINT.md  SYNTHESIS_REVIEW.md  THEOREMS.md
examples/: neural_demo.py
src/flu/: __init__.py  _version.py  constants.py
tests/benchmarks/: __init__.py  bench_addressing.py  bench_apn_hub.py  bench_comparison.py  bench_discrepancy.py  bench_dn2_character_sum.py  bench_fusion.py  bench_qmc_rigor.py  bench_traversal.py  run_benchmark_suite.py  run_full_audit.py
tests/test_container/: test_arithmetic.py
tests/test_core/: test_apn_seeds.py  test_even_n.py  test_factoradic.py  test_fm_dance.py  test_fm_dance_properties.py  test_fmd_net.py  test_fractal_3_6.py  test_fractal_net.py  test_hypothesis.py  test_hypothesis_deterministic.py  test_lo_shu_hypercell.py  test_magic_hypercube.py  test_math_helpers.py  test_nary_vhdl.py  test_od32_iterator.py  test_parity_neural.py  test_parity_switcher.py  (+1 more)
tools/: cube_comparison_order5.py  generate_registry_json.py  theorem_dag.py  verify_contract.py  viz_traversal.py
(+25 files in other folders)
